force-app/main/default/objects/Shift__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>