force-app/main/default/objects/Shift__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <type>Time</type>
</CustomField>