force-app/main/default/objects/Shift__c/fields/Shift_Hour__c.field-meta.xml
<CustomField>
    <fullName>Shift_Hour__c</fullName>
    <label>Shift Hour</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>